# StarMemo

./: .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  roles.py  run.sh  setup.sh  test_janome.py
static/: script.js  sky.css
templates/: admin.html  change_password.html  forbidden.html  login.html  privacy.html  sky.html  terms.html
