[project]
name = "notsns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.17.0",
    "requests>=2.34.2",
    "tinysegmenter3>=0.1.0",
]
